src/test/deca/context/invalid/rvalue_init_bool_to_int_in_class.deca
// Test la règle 3.28: 

class A  {
    int x = true;
}
